- Use IOUtil.UTF_8 constant in place of ad-hoc "UTF-8" strings. - Use StringUtil.EMPTY in place of "" - Use buffer size of 8192 in IOUtil transfers. - Use FileChannel.transferTo when copying file to file - Use IOUtil.pipe internally to replace for loops to do copying from stream to stream