@@ -132,9 +132,9 @@ public class EngineYardDeployWizard extends AbstractDeployWizard
 					final String HOST = "http://toolbox.aptana.com"; //$NON-NLS-1$
 					StringBuilder builder = new StringBuilder(HOST);
 					builder.append("/webhook/engineyard?request_id="); //$NON-NLS-1$
-					builder.append(URLEncoder.encode(PingStartup.getApplicationId(), "UTF-8")); //$NON-NLS-1$
+					builder.append(URLEncoder.encode(PingStartup.getApplicationId(), IOUtil.UTF_8));
 					builder.append("&email="); //$NON-NLS-1$
-					builder.append(URLEncoder.encode(userID, "UTF-8")); //$NON-NLS-1$
+					builder.append(URLEncoder.encode(userID, IOUtil.UTF_8));
 					builder.append("&type=signuphook"); //$NON-NLS-1$
 					builder.append("&version="); //$NON-NLS-1$
 					builder.append(EclipseUtil.getPluginVersion(CorePlugin.PLUGIN_ID));
